--- a/awards.html
+++ b/awards.html
@@ -63,6 +63,38 @@
             font-weight: bold;
             margin-right: 5px;
         }
+
+        .award-container {
+            margin-bottom: 40px;
+        }
+
+        .top-10-section {
+            background: #f5f5f5;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
+
+        .top-10-list {
+            min-height: 50px;
+        }
+
+        .top-10-item {
+            padding: 8px;
+            margin: 5px 0;
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .move-up, .move-down {
+            padding: 2px 8px;
+            margin: 0 2px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -79,98 +111,133 @@
 
                 <!-- Awards Tables -->
                 <div class="awards-section">
-                    <!-- Balon D'XL Award -->
-                    <h2>Balon D'XL</h2>
-                    <div class="top-10-list"></div>
-                    <table id="balonDXLAward" class="display">
-                        <thead>
-                            <tr>
-                                <th>Player Name</th>
-                                <th>Team</th>
-                                <th>Age</th>
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Player data will be populated here -->
-                        </tbody>
-                    </table>
+                    <!-- Ballon d'XL Award -->
+                    <h2>Ballon d'XL</h2>
+                    <div class="award-container">
+                        <div class="top-10-section">
+                            <h3>Your Top 10 Selections</h3>
+                            <div class="top-10-list"></div>
+                        </div>
+                        <table id="balonDXLAward" class="display">
+                            <thead>
+                                <tr>
+                                    <th>Player Name</th>
+                                    <th>Team</th>
+                                    <th>Age</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Player data will be populated here -->
+                            </tbody>
+                        </table>
+                    </div>
 
                     <!-- Most Improved Award -->
                     <h2>Most Improved</h2>
-                    <table id="mostImprovedAward" class="display">
-                        <thead>
-                            <tr>
-                                <th>Player Name</th>
-                                <th>Position</th>
-                                <th>Team</th>
-                                <th>Age Group</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Add player data here -->
-                        </tbody>
-                    </table>
+                    <div class="award-container">
+                        <div class="top-10-section">
+                            <h3>Your Top 10 Selections</h3>
+                            <div class="top-10-list"></div>
+                        </div>
+                        <table id="mostImprovedAward" class="display">
+                            <thead>
+                                <tr>
+                                    <th>Player Name</th>
+                                    <th>Position</th>
+                                    <th>Team</th>
+                                    <th>Age Group</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Add player data here -->
+                            </tbody>
+                        </table>
+                    </div>
 
                     <!-- Best Forward Award -->
                     <h2>Best Forward</h2>
-                    <table id="bestForwardAward" class="display">
-                        <thead>
-                            <tr>
-                                <th>Player Name</th>
-                                <th>Team</th>
-                                <th>Age Group</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Add player data here -->
-                        </tbody>
-                    </table>
+                    <div class="award-container">
+                        <div class="top-10-section">
+                            <h3>Your Top 10 Selections</h3>
+                            <div class="top-10-list"></div>
+                        </div>
+                        <table id="bestForwardAward" class="display">
+                            <thead>
+                                <tr>
+                                    <th>Player Name</th>
+                                    <th>Team</th>
+                                    <th>Age Group</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Add player data here -->
+                            </tbody>
+                        </table>
+                    </div>
 
                     <!-- Best Midfielder Award -->
                     <h2>Best Midfielder</h2>
-                    <table id="bestMidfielderAward" class="display">
-                        <thead>
-                            <tr>
-                                <th>Player Name</th>
-                                <th>Team</th>
-                                <th>Age Group</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Add player data here -->
-                        </tbody>
-                    </table>
+                    <div class="award-container">
+                        <div class="top-10-section">
+                            <h3>Your Top 10 Selections</h3>
+                            <div class="top-10-list"></div>
+                        </div>
+                        <table id="bestMidfielderAward" class="display">
+                            <thead>
+                                <tr>
+                                    <th>Player Name</th>
+                                    <th>Team</th>
+                                    <th>Age Group</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Add player data here -->
+                            </tbody>
+                        </table>
+                    </div>
 
                     <!-- Best Defender Award -->
                     <h2>Best Defender</h2>
-                    <table id="bestDefenderAward" class="display">
-                        <thead>
-                            <tr>
-                                <th>Player Name</th>
-                                <th>Team</th>
-                                <th>Age Group</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Add player data here -->
-                        </tbody>
-                    </table>
+                    <div class="award-container">
+                        <div class="top-10-section">
+                            <h3>Your Top 10 Selections</h3>
+                            <div class="top-10-list"></div>
+                        </div>
+                        <table id="bestDefenderAward" class="display">
+                            <thead>
+                                <tr>
+                                    <th>Player Name</th>
+                                    <th>Team</th>
+                                    <th>Age Group</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Add player data here -->
+                            </tbody>
+                        </table>
+                    </div>
 
                     <!-- Best Goalkeeper Award -->
                     <h2>Best Goalkeeper</h2>
-                    <table id="bestGoalkeeperAward" class="display">
-                        <thead>
-                            <tr>
-                                <th>Player Name</th>
-                                <th>Team</th>
-                                <th>Age Group</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- Add player data here -->
-                        </tbody>
-                    </table>
+                    <div class="award-container">
+                        <div class="top-10-section">
+                            <h3>Your Top 10 Selections</h3>
+                            <div class="top-10-list"></div>
+                        </div>
+                        <table id="bestGoalkeeperAward" class="display">
+                            <thead>
+                                <tr>
+                                    <th>Player Name</th>
+                                    <th>Team</th>
+                                    <th>Age Group</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Add player data here -->
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
@@ -207,14 +274,14 @@
 
             // Initialize DataTables
             const tables = [
-                '#balonDXLAward',
-                '#mostImprovedAward',
-                '#bestForwardAward',
-                '#bestMidfielderAward',
-                '#bestDefenderAward',
-                '#bestGoalkeeperAward'
-            ].forEach(tableId => {
-                $(tableId).DataTable({
+                {id: '#balonDXLAward', title: 'Ballon d\'XL'},
+                {id: '#mostImprovedAward', title: 'Most Improved'},
+                {id: '#bestForwardAward', title: 'Best Forward'},
+                {id: '#bestMidfielderAward', title: 'Best Midfielder'},
+                {id: '#bestDefenderAward', title: 'Best Defender'},
+                {id: '#bestGoalkeeperAward', title: 'Best Goalkeeper'}
+            ].forEach(table => {
+                $(table.id).DataTable({
                     pageLength: 12,
                     lengthChange: false,
                     searching: true,
