--- a/program.html
+++ b/program.html
@@ -808,6 +808,29 @@ Payment Plan: ${paymentPlanText}
             let x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
             e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
         });
+
+        document.addEventListener("DOMContentLoaded", function() {
+            // Initialize Vanta background
+            VANTA.CELLS({
+                el: "#vanta-bg",
+                mouseControls: true,
+                touchControls: true,
+                gyroControls: false,
+                minHeight: 200.00,
+                minWidth: 200.00,
+                scale: 1.00,
+                color1: 0x045034,
+                color2: 0x109963,
+                size: 0.20,
+                speed: 0.00
+            });
+
+            // Hide unnecessary elements
+            const inviteForm = document.getElementById('inviteForm');
+            const playerInfo = document.getElementById('playerInfo');
+            if (inviteForm) inviteForm.style.display = 'none';
+            if (playerInfo) playerInfo.style.display = 'none';
+        });
     </script>
 </body>
 </html> 
