--- a/program.html
+++ b/program.html
@@ -606,7 +606,7 @@ Payment Plan: ${paymentPlanText}
         });
 
         function handleInviteCode(code) {
-            const validCodes = ['AHRIK2025', 'RAYYAN2025', 'ELLIOT2025', 'COOPER2025', 'LOGAN2025'];
+            const validCodes = ['AHRIK2025', 'RAYYAN2025', 'ELLIOT2025', 'COOPER2025', 'LOGAN2025', 'KABIR2025'];
             const loadingDiv = document.getElementById('loading');
             loadingDiv.style.display = 'block';
             loadingDiv.textContent = 'Checking invite code...';
@@ -639,7 +639,8 @@ Payment Plan: ${paymentPlanText}
                 'RAYYAN2025': { name: 'Rayyan Shanti', year: 2015, phone: '(919) 840-8094', email: 'heba2000_b@hotmail.com' },
                 'ELLIOT2025': { name: 'Elliot Haxell', year: 2016, phone: '(919) 622-5755', email: 'susanna.haxell@gmail.com' },
                 'COOPER2025': { name: 'Cooper Young', year: 2017, phone: '(919) 624-1961', email: 'laurafranklin919@aol.com' },
-                'LOGAN2025': { name: 'Logan Carey', year: 2016, phone: '(631) 291-0819', email: 'victoriamcarey@yahoo.com' }
+                'LOGAN2025': { name: 'Logan Carey', year: 2016, phone: '(631) 291-0819', email: 'victoriamcarey@yahoo.com' },
+                'KABIR2025': { name: 'Kabir Patel', year: 2015, phone: '(201) 993-3448', email: 'krpatel_in@yahoo.com' }
             };
             const info = playerInfo[code];
             if (info) {
