ui and small changes

--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@
             submitInviteCode();
         }
     </script>
+    <!-- Sticky Help Button -->
+    <button class="help-button" title="Need Help?">?</button>
 </body>
 </html>
