--- a/program.html
+++ b/program.html
@@ -68,7 +68,7 @@
                 <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
             </a>
         </div>
-        
+
         <!-- Welcome section on dark background -->
         <div id="welcome-section">
             <h2>Welcome to Apex Athletic Club</h2>
@@ -94,160 +94,161 @@
 
     <!-- Program selection section (for Full Program) -->
     <div class="program-content" id="program-selection" style="display: none;">
-        <h3>Select Programs (Choose 2 Additional)</h3>
-        <!-- Indoor Soccer -->
-        <div class="sport-option">
-            <div class="sport-header">
-                <input type="checkbox" id="indoor-soccer" name="programs" value="Indoor Soccer" checked disabled>
-                <span class="sport-title">Indoor Soccer/Futsal (Required)</span>
-            </div>
-            <div class="sport-details">
-                <div class="text-content">
-                    <div class="timeline"><strong>October - February and May - August</strong></div>
-                    <div class="age-group"><strong>2014s and younger</strong></div>
-                    <div class="schedule"><strong>Tuesday and Saturday</strong></div>
-                    <ul>
-                        <li>Professional, licensed coaches</li>
-                        <li>Focus on technical skills and fast-paced decision making</li>
-                        <li>Small-sided games and futsal tournaments</li>
-                        <li>Perfect for developing close control and creativity</li>
-                    </ul>
-                    <div class="location"><strong>Location: <a href="https://goo.gl/maps/h2VgMBNPgP9RmvJR6" target="_blank">XL Sports World Apex</a></strong></div>
+        <div class="sport-selection">
+            <!-- Indoor Soccer -->
+            <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" id="indoor-soccer" name="programs" value="Indoor Soccer" checked disabled>
+                    <span class="sport-title">Indoor Soccer/Futsal (Required)</span>
                 </div>
-                <div class="image-container">
-                    <img src="images/XLSWAPEX.png" alt="Indoor Soccer">
-                    <img src="images/USFUTSAL.png" alt="US Futsal">
+                <div class="sport-details">
+                    <div class="text-content">
+                        <div class="timeline"><strong>October - February and May - August</strong></div>
+                        <div class="age-group"><strong>2014s and younger</strong></div>
+                        <div class="schedule"><strong>Tuesday and Saturday</strong></div>
+                        <ul>
+                            <li>Professional, licensed coaches</li>
+                            <li>Focus on technical skills and fast-paced decision making</li>
+                            <li>Small-sided games and futsal tournaments</li>
+                            <li>Perfect for developing close control and creativity</li>
+                        </ul>
+                        <div class="location"><strong>Location: <a href="https://goo.gl/maps/h2VgMBNPgP9RmvJR6" target="_blank">XL Sports World Apex</a></strong></div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/XLSWAPEX.png" alt="Indoor Soccer">
+                        <img src="images/USFUTSAL.png" alt="US Futsal">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Outdoor Soccer -->
-        <div class="sport-option">
-            <div class="sport-header">
-                <input type="checkbox" id="outdoor-soccer" name="programs" value="Outdoor Soccer" checked disabled>
-                <span class="sport-title">Outdoor Soccer (Required)</span>
-            </div>
-            <div class="sport-details">
-                <div class="text-content">
-                    <div class="timeline"><strong>March - May and August - October</strong></div>
-                    <div class="age-group"><strong>2014s and younger</strong></div>
-                    <div class="schedule"><strong>Fridays</strong></div>
-                    <ul>
-                        <li>Professional, licensed coaches</li>
-                        <li>Emphasis on tactical understanding and game intelligence</li>
-                        <li>Competitive matches through US Club Soccer</li>
-                        <li>Position-specific training</li>
-                        <li>Focus on building complete players</li>
-                    </ul>
-                    <div class="location"><strong>Location: <a href="https://maps.app.goo.gl/Ld5YPTFVKGBxKGqb7" target="_blank">Piney Wood Park</a></strong></div>
+            <!-- Outdoor Soccer -->
+            <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" id="outdoor-soccer" name="programs" value="Outdoor Soccer" checked disabled>
+                    <span class="sport-title">Outdoor Soccer (Required)</span>
                 </div>
-                <div class="image-container">
-                    <img src="images/CPR.png" alt="Cary Parks">
-                    <img src="images/DPR.png" alt="Durham Parks">
-                    <img src="images/USCLUBSOCCER.webp" alt="US Club Soccer">
+                <div class="sport-details">
+                    <div class="text-content">
+                        <div class="timeline"><strong>March - May and August - October</strong></div>
+                        <div class="age-group"><strong>2014s and younger</strong></div>
+                        <div class="schedule"><strong>Tuesdays and Saturdays</strong></div>
+                        <ul>
+                            <li>Professional, licensed coaches</li>
+                            <li>Emphasis on tactical understanding and game intelligence</li>
+                            <li>Competitive matches through US Club Soccer</li>
+                            <li>Position-specific training</li>
+                            <li>Focus on building complete players</li>
+                        </ul>
+                        <div class="location"><strong>Location: <a href="https://maps.app.goo.gl/Ld5YPTFVKGBxKGqb7" target="_blank">Piney Wood Park</a></strong></div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/CPR.png" alt="Cary Parks">
+                        <img src="images/DPR.png" alt="Durham Parks">
+                        <img src="images/USCLUBSOCCER.webp" alt="US Club Soccer">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Small Group Training (required for full program) -->
-        <div class="sport-option">
-            <div class="sport-header">
-                <input type="checkbox" id="small-group" name="programs" value="Small Group Training" checked disabled>
-                <span class="sport-title">Small Group Training (Required)</span>
-            </div>
-            <div class="sport-details">
-                <div class="text-content">
-                    <div class="timeline"><strong>Year-round</strong></div>
-                    <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Flexible scheduling</strong></div>
-                    <ul>
-                        <li>Professional, licensed coaches</li>
-                        <li>Maximum 4 players per coach</li>
-                        <li>Personalized attention and feedback</li>
-                        <li>Focused skill development</li>
-                        <li>Custom training plans based on player needs</li>
-                    </ul>
-                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+            <!-- Small Group Training (required for full program) -->
+            <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" id="small-group" name="programs" value="Small Group Training" checked disabled>
+                    <span class="sport-title">Small Group Training (Required)</span>
                 </div>
-                <div class="image-container">
-                    <img src="images/XLSWAPEX.png" alt="XLSW Apex">
+                <div class="sport-details">
+                    <div class="text-content">
+                        <div class="timeline"><strong>Year-round</strong></div>
+                        <div class="age-group"><strong>2010s and younger</strong></div>
+                        <div class="schedule"><strong>Flexible scheduling</strong></div>
+                        <ul>
+                            <li>Professional, licensed coaches</li>
+                            <li>Maximum 4 players per coach</li>
+                            <li>Personalized attention and feedback</li>
+                            <li>Focused skill development</li>
+                            <li>Custom training plans based on player needs</li>
+                        </ul>
+                        <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=1250+Ambergate+Station,+Apex,+NC+27502" target="_blank">Hunter Street Park</a>, <a href="https://www.google.com/maps/search/?api=1&query=2600+Evans+Rd,+Apex,+NC+27502" target="_blank">Apex Nature Park</a>, or <a href="https://www.google.com/maps/search/?api=1&query=1016+Investment+Blvd" target="_blank">XLSW Apex</a></strong></div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/XLSWAPEX.png" alt="XLSW Apex">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Judo -->
-        <div class="sport-option">
-            <div class="sport-header" onclick="document.getElementById('judo').click()">
-                <input type="checkbox" id="judo" name="programs" value="Judo">
-                <span class="sport-title">Judo</span>
-            </div>
-            <div class="sport-details">
-                <div class="text-content">
-                    <div class="timeline"><strong>October - February and May - August</strong></div>
-                    <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Wednesdays and Fridays 5:00 PM</strong></div>
-                    <ul>
-                        <li>Professional, licensed coaches</li>
-                        <li>Led by experienced black belt instructors</li>
-                        <li>Develops balance, coordination, and mental discipline</li>
-                        <li>Used by top clubs like Ajax for youth training</li>
-                        <li>Enhances physical and mental resilience</li>
-                        <li>Builds confidence and self-defense skills</li>
-                    </ul>
-                    <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=5563+Western+Blvd,+Suite+12,+Raleigh,+NC+27606" target="_blank">Cary Judo Club</a></strong></div>
+            <!-- Judo -->
+            <div class="sport-option">
+                <div class="sport-header" onclick="document.getElementById('judo').click()">
+                    <input type="checkbox" id="judo" name="programs" value="Judo">
+                    <span class="sport-title">Judo</span>
                 </div>
-                <div class="image-container">
-                    <img src="images/CARYJUDOCLUB.png" alt="Judo">
+                <div class="sport-details">
+                    <div class="text-content">
+                        <div class="timeline"><strong>October - February and May - August</strong></div>
+                        <div class="age-group"><strong>2010s and younger</strong></div>
+                        <div class="schedule"><strong>Wednesdays and Fridays 5:00 PM</strong></div>
+                        <ul>
+                            <li>Professional, licensed coaches</li>
+                            <li>Led by experienced black belt instructors</li>
+                            <li>Develops balance, coordination, and mental discipline</li>
+                            <li>Used by top clubs like Ajax for youth training</li>
+                            <li>Enhances physical and mental resilience</li>
+                            <li>Builds confidence and self-defense skills</li>
+                        </ul>
+                        <div class="location"><strong>Location: <a href="https://www.google.com/maps/search/?api=1&query=5563+Western+Blvd,+Suite+12,+Raleigh,+NC+27606" target="_blank">Cary Judo Club</a></strong></div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/CARYJUDOCLUB.png" alt="Judo">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Flag Football -->
-        <div class="sport-option">
-            <div class="sport-header" onclick="document.getElementById('flag-football').click()">
-                <input type="checkbox" id="flag-football" name="programs" value="Flag Football">
-                <span class="sport-title">Flag Football</span>
-            </div>
-            <div class="sport-details">
-                <div class="text-content">
-                    <div class="timeline"><strong>March - May and August - October</strong></div>
-                    <div class="age-group"><strong>2014s and younger</strong></div>
-                    <div class="schedule"><strong>Tuesdays and Sundays</strong></div>
-                    <ul>
-                        <li>Non-contact skill development</li>
-                        <li>Focus on agility and strategic thinking</li>
-                        <li>Great for developing overall athleticism</li>
-                        <li>Teaches field awareness and spatial recognition</li>
-                        <li>Enhances creative thinking for set pieces in soccer</li>
-                        <li>Fun way to cross-train</li>
-                    </ul>
-                    <div class="location"><strong>Location: <a href="https://goo.gl/maps/h2VgMBNPgP9RmvJR6" target="_blank">XL Sports World Apex</a></strong></div>
+            <!-- Flag Football -->
+            <div class="sport-option">
+                <div class="sport-header" onclick="document.getElementById('flag-football').click()">
+                    <input type="checkbox" id="flag-football" name="programs" value="Flag Football">
+                    <span class="sport-title">Flag Football</span>
                 </div>
-                <div class="image-container">
-                    <img src="images/XLSWAPEX.png" alt="Flag Football">
+                <div class="sport-details">
+                    <div class="text-content">
+                        <div class="timeline"><strong>March - May and August - October</strong></div>
+                        <div class="age-group"><strong>2014s and younger</strong></div>
+                        <div class="schedule"><strong>Tuesdays and Saturdays</strong></div>
+                        <ul>
+                            <li>Non-contact skill development</li>
+                            <li>Focus on agility and strategic thinking</li>
+                            <li>Great for developing overall athleticism</li>
+                            <li>Teaches field awareness and spatial recognition</li>
+                            <li>Enhances creative thinking for set pieces in soccer</li>
+                            <li>Fun way to cross-train</li>
+                        </ul>
+                        <div class="location"><strong>Location: <a href="https://goo.gl/maps/h2VgMBNPgP9RmvJR6" target="_blank">XL Sports World Apex</a></strong></div>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/XLSWAPEX.png" alt="Flag Football">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Basketball -->
-        <div class="sport-option">
-            <div class="sport-header">
-                <input type="checkbox" name="sports" value="basketball" disabled>
-                <span class="sport-title">Basketball</span>
+            <!-- Basketball -->
+            <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="basketball" disabled>
+                    <span class="sport-title">Basketball</span>
+                </div>
+                <div class="sport-details">
+                    <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                </div>
             </div>
-            <div class="sport-details">
-                <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
-            </div>
-        </div>
 
-        <!-- Tumbling Gymnastics -->
-        <div class="sport-option">
-            <div class="sport-header">
-                <input type="checkbox" name="sports" value="tumbling-gymnastics" disabled>
-                <span class="sport-title">Tumbling Gymnastics</span>
-            </div>
-            <div class="sport-details">
-                <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+            <!-- Tumbling Gymnastics -->
+            <div class="sport-option">
+                <div class="sport-header">
+                    <input type="checkbox" name="sports" value="tumbling-gymnastics" disabled>
+                    <span class="sport-title">Tumbling Gymnastics</span>
+                </div>
+                <div class="sport-details">
+                    <p style="font-weight: bold; text-transform: uppercase;">COMING SOON</p>
+                </div>
             </div>
         </div>
 
@@ -364,7 +365,7 @@
                     <div class="day-selection">
                         <p>Available days:</p>
                         <label><input type="checkbox" name="ff-days" value="tuesday" checked disabled> Tuesday</label>
-                        <label><input type="checkbox" name="ff-days" value="sunday" checked disabled> Sunday</label>
+                        <label><input type="checkbox" name="ff-days" value="saturday" checked disabled> Saturday</label>
                     </div>
                 </div>
             </div>
