--- a/program.html
+++ b/program.html
@@ -607,7 +607,27 @@ Payment Plan: ${paymentPlanText}
         });
 
         function handleInviteCode(code) {
-            const validCodes = ['AHRIK2025', 'RAYYAN2025', 'ELLIOT2025', 'COOPER2025', 'LOGAN2025', 'KABIR2025', 'SERGEI2025'];
+            const validCodes = [
+                'AHRIK2025',
+                'RAYYAN2025',
+                'ELLIOT2025',
+                'COOPER2025',
+                'LOGAN2025',
+                'KABIR2025',
+                'SERGEI2025',
+                'ERIC2025',
+                'JERRY2025',
+                'JAXON2025',
+                'SHRAVIN2025',
+                'ATHARV2025',
+                'ANTONIO2025',
+                'AYAAN2025',
+                'CAMERON2025',
+                'YUHI2025',
+                'IVAN2025',
+                'HOLDEN2025',
+                'JACK2025'
+            ];
             const loadingDiv = document.getElementById('loading');
             loadingDiv.style.display = 'block';
             loadingDiv.textContent = 'Checking invite code...';
@@ -636,30 +656,54 @@ Payment Plan: ${paymentPlanText}
 
         function displayPlayerInfo(code) {
             const playerInfo = {
-                'AHRIK2025': { name: 'Ahrik Mathur', year: 2015, phone: '(718) 986-1869', email: 'smathurmd@gmail.com' },
-                'RAYYAN2025': { name: 'Rayyan Shanti', year: 2015, phone: '(919) 840-8094', email: 'heba2000_b@hotmail.com' },
-                'ELLIOT2025': { name: 'Elliot Haxell', year: 2016, phone: '(919) 622-5755', email: 'susanna.haxell@gmail.com' },
-                'COOPER2025': { name: 'Cooper Young', year: 2017, phone: '(919) 624-1961', email: 'laurafranklin919@aol.com' },
-                'LOGAN2025': { name: 'Logan Carey', year: 2016, phone: '(631) 291-0819', email: 'victoriamcarey@yahoo.com' },
-                'KABIR2025': { name: 'Kabir Patel', year: 2015, phone: '(201) 993-3448', email: 'krpatel_in@yahoo.com' },
-                'SERGEI2025': { name: 'Sergei Ustenko', year: 2015, phone: '(984) 242-6834', email: 'ustenko.a88@gmail.com' }
+                'AHRIK2025': { fullName: 'Ahrik Mathur', email: 'smathurmd@gmail.com', phone: '(718) 986-1869', birthYear: 2015 },
+                'RAYYAN2025': { fullName: 'Rayyan Shanti', email: 'heba2000_b@hotmail.com', phone: '(919) 840-8094', birthYear: 2015 },
+                'ELLIOT2025': { fullName: 'Elliot Haxell', email: 'susanna.haxell@gmail.com', phone: '(919) 622-5755', birthYear: 2016 },
+                'COOPER2025': { fullName: 'Cooper Young', email: 'laurafranklin919@aol.com', phone: '(919) 624-1961', birthYear: 2017 },
+                'LOGAN2025': { fullName: 'Logan Carey', email: 'victoriamcarey@yahoo.com', phone: '(631) 291-0819', birthYear: 2016 },
+                'KABIR2025': { fullName: 'Kabir Patel', email: 'krpatel_in@yahoo.com', phone: '(201) 993-3448', birthYear: 2015 },
+                'SERGEI2025': { fullName: 'Sergei Ustenko', email: 'ustenko.a88@gmail.com', phone: '(984) 242-6834', birthYear: 2015 },
+                'ERIC2025': { fullName: 'Eric Heggen', email: 'lchevis@gmail.com', phone: '704-619-0765', birthYear: 2015 },
+                'JERRY2025': { fullName: 'Jerry Yuen', email: 'rockyyuen33@gmail.com', phone: '919-221-1055', birthYear: 2015 },
+                'JAXON2025': { fullName: 'Jaxon Jenkins', email: 'joshua.jenkins.025@gmail.com', phone: '', birthYear: 2015 },
+                'SHRAVIN2025': { fullName: 'Shravin Kancharla', email: 'Vinaybabu.k@gmail.com', phone: '919-593-4765', birthYear: 2016 },
+                'ATHARV2025': { fullName: 'Atharv Kishan', email: 'Swathi.j3005@gmail.com', phone: '218-316-1727', birthYear: 2015 },
+                'ANTONIO2025': { fullName: 'Antonio Loffredo', email: 'Raymond.Loffredo05@gmail.com', phone: '+1-703-853-5231', birthYear: 2015 },
+                'AYAAN2025': { fullName: 'Ayaan Nettem', email: 'rajprasad.nettem@gmail.com', phone: '919-637-9026', birthYear: 2018 },
+                'CAMERON2025': { fullName: 'Cameron Steed', email: 'tpsteed@gmail.com', phone: '+1-336-432-7793', birthYear: 2016 },
+                'YUHI2025': { fullName: 'Yuhi Kaya', email: 'tkaya1984@gmail.com', phone: '919-710-5437', birthYear: 2015 },
+                'IVAN2025': { fullName: 'Ivan Lyapunov', email: 'valgma82@gmail.com', phone: '', birthYear: '' },
+                'HOLDEN2025': { fullName: 'Holden Hitchcock', email: 'hitchcock.derick@gmail.com', phone: '', birthYear: '' },
+                'JACK2025': { fullName: 'Jack Warwick', email: 'ms.sarah.mck@gmail.com', phone: '', birthYear: '' }
             };
             const info = playerInfo[code];
             if (info) {
-                const [firstName, lastName] = info.name.split(' ');
+                const [firstName, ...lastNameParts] = info.fullName.split(' ');
+                const lastName = lastNameParts.join(' ');
                 document.getElementById('first-name').value = firstName || '';
                 document.getElementById('last-name').value = lastName || '';
-                document.getElementById('birth-year').value = info.year || '';
+                document.getElementById('birth-year').value = info.birthYear || '';
                 document.getElementById('email').value = info.email || '';
                 document.getElementById('phone').value = info.phone || '';
                 
-                // Optionally show player info
+                // Update visible player info section (if present)
                 const playerInfoDiv = document.getElementById('playerInfo');
-                playerInfoDiv.style.display = 'block';
-                document.getElementById('playerName').textContent = info.name;
-                document.getElementById('playerYear').textContent = info.year;
-                document.getElementById('playerPhone').textContent = info.phone;
-                document.getElementById('playerEmail').textContent = info.email;
+                if (playerInfoDiv) {
+                    playerInfoDiv.style.display = 'block';
+                    document.getElementById('playerName').textContent = info.fullName;
+                    document.getElementById('playerYear').textContent = info.birthYear;
+                    document.getElementById('playerPhone').textContent = info.phone;
+                    document.getElementById('playerEmail').textContent = info.email;
+                }
+                console.log(`Preloading form for ${code}:`, {
+                    firstName: firstName,
+                    lastName: lastName,
+                    birthYear: info.birthYear,
+                    email: info.email,
+                    phone: info.phone
+                });
+            } else {
+                console.error(`No player info found for code: ${code}`);
             }
         }
 
