--- a/invite.html
+++ b/invite.html
@@ -53,7 +53,27 @@
         });
 
         function handleInviteCode(code) {
-            const validCodes = ['AHRIK2025', 'RAYYAN2025', 'ELLIOT2025', 'COOPER2025', 'LOGAN2025', 'KABIR2025'];
+            const validCodes = [
+                'AHRIK2025',
+                'RAYYAN2025',
+                'ELLIOT2025',
+                'COOPER2025',
+                'LOGAN2025',
+                'KABIR2025',
+                'SERGEI2025',
+                'ERIC2025',
+                'JERRY2025',
+                'JAXON2025',
+                'SHRAVIN2025',
+                'ATHARV2025',
+                'ANTONIO2025',
+                'AYAAN2025',
+                'CAMERON2025',
+                'YUHI2025',
+                'IVAN2025',
+                'HOLDEN2025',
+                'JACK2025'
+            ];
             const loadingDiv = document.getElementById('loading');
             loadingDiv.style.display = 'block';
             loadingDiv.textContent = 'Checking invite code...';
@@ -61,7 +81,7 @@
                 if (validCodes.includes(code)) {
                     loadingDiv.textContent = 'Valid invite code - redirecting...';
                     setTimeout(() => {
-                        window.location.href = `program.html?invite_code=${code}`;
+                        window.location.href = `program.html?inviteCode=${code}`;
                     }, 1000);
                 } else {
                     loadingDiv.textContent = 'Invalid invite code';
