--- a/invite.html
+++ b/invite.html
@@ -72,7 +72,8 @@
                 'YUHI2025',
                 'IVAN2025',
                 'HOLDEN2025',
-                'JACK2025'
+                'JACK2025',
+                'MASATERU2025'
             ];
             const loadingDiv = document.getElementById('loading');
             loadingDiv.style.display = 'block';
