--- a/program.html
+++ b/program.html
@@ -626,7 +626,8 @@ Payment Plan: ${paymentPlanText}
                 'YUHI2025',
                 'IVAN2025',
                 'HOLDEN2025',
-                'JACK2025'
+                'JACK2025',
+                'MASATERU2025'
             ];
             const loadingDiv = document.getElementById('loading');
             loadingDiv.style.display = 'block';
@@ -674,7 +675,8 @@ Payment Plan: ${paymentPlanText}
                 'YUHI2025': { fullName: 'Yuhi Kaya', email: 'tkaya1984@gmail.com', phone: '919-710-5437', birthYear: 2015 },
                 'IVAN2025': { fullName: 'Ivan Lyapunov', email: 'valgma82@gmail.com', phone: '', birthYear: '' },
                 'HOLDEN2025': { fullName: 'Holden Hitchcock', email: 'hitchcock.derick@gmail.com', phone: '', birthYear: '' },
-                'JACK2025': { fullName: 'Jack Warwick', email: 'ms.sarah.mck@gmail.com', phone: '', birthYear: '' }
+                'JACK2025': { fullName: 'Jack Warwick', email: 'ms.sarah.mck@gmail.com', phone: '', birthYear: '' },
+                'MASATERU2025': { fullName: 'Masateru Ishigaki', email: 'masatomo.ishigaki.izumi@gmail.com', phone: '0908742862', birthYear: 2014 }
             };
             const info = playerInfo[code];
             if (info) {
