--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <li>Tumbling techniques</li>
                                 <li>Body control</li>
                                 <li>Strength development</li>
-                                <li>Coming Fall 2024</li>
+                                <li>Coming Winter 2025</li>
                             </ul>
                         </div>
                     </div>
@@ -183,12 +183,12 @@
                         <i class="fas fa-basketball-ball sport-icon"></i>
                         <p><strong>Coming Soon</strong></p>
                         <div class="sport-details">
-                            <p>Develops hand-eye coordination, teamwork, and spatial awareness.</p>
+                            <p>Develops coordination, teamwork, and strategic thinking on the court.</p>
                             <ul>
+                                <li>Ball handling</li>
                                 <li>Shooting techniques</li>
-                                <li>Dribbling skills</li>
-                                <li>Defensive positioning</li>
-                                <li>Coming Winter 2024</li>
+                                <li>Team strategies</li>
+                                <li>Coming Fall 2025</li>
                             </ul>
                         </div>
                     </div>
