--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <a href="trial-request.html" class="cta-button secondary">
                     <i class="fas fa-calendar-check"></i> REQUEST A TRIAL
                 </a>
+                <a href="login.html" class="cta-button tertiary">
+                    <i class="fas fa-sign-in-alt"></i> LOGIN
+                </a>
             </div>
                 <div id="partnership-container">
                     <img id="partner-logo" src="images/Ecuador_national_football_team.png" alt="Ecuador National Football Team Logo">
