small button and register fixes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <i class="fas fa-chevron-down"></i> LEARN MORE
         </button>
 
+        <a href="login.html" class="login-btn">
+            <i class="fas fa-sign-in-alt"></i> LOGIN
+        </a>
+
         <div class="hero-section">
             <h1>Apex Athletic Club</h1>
             <h2>A Talent Factory for Promising Individuals</h2>
@@ -34,9 +38,6 @@
                 </a>
                 <a href="trial-request.html" class="cta-button secondary">
                     <i class="fas fa-calendar-check"></i> REQUEST A TRIAL
-                </a>
-                <a href="login.html" class="cta-button tertiary">
-                    <i class="fas fa-sign-in-alt"></i> LOGIN
                 </a>
             </div>
                 <div id="partnership-container">
