--- a/register.html
+++ b/register.html
@@ -224,6 +224,7 @@
                     lastName: formData.get('lastName'),
                     email: formData.get('email'),
                     phone: formData.get('phone'),
+                    password: formData.get('password'),
                     inviteCode: formData.get('inviteCode')
                 };
                 
