--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 
             <!-- Programs Section -->
             <section id="programs" class="content-section">
+                <div class="section-background">
+                    <img src="images/soccerPHOTO.jpeg" alt="Soccer training" class="section-background-image">
+                </div>
                 <h2><i class="fas fa-graduation-cap"></i> Our Programs</h2>
                 
                 <div class="programs-container">
@@ -68,7 +71,7 @@
                             <p><strong>Training Focus</strong></p>
                             <ul>
                                 <li><i class="fas fa-check"></i> Year-round training</li>
-                                <li><i class="fas fa-check"></i> Maximum 4 players per coach</li>
+                                <li><i class="fas fa-check"></i> Maximum 6 players per coach</li>
                                 <li><i class="fas fa-check"></i> Personalized attention and feedback</li>
                                 <li><i class="fas fa-check"></i> Focused skill development</li>
                                 <li><i class="fas fa-check"></i> Option to join team practices</li>
@@ -160,7 +163,7 @@
                                 <li>Agility training</li>
                                 <li>Strategic thinking</li>
                                 <li>Hand-eye coordination</li>
-                                <li>Team play concepts</li>
+                                <li>Set play concepts (corners, free kicks, etc.)</li>
                             </ul>
                         </div>
                     </div>
